[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_pause"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_pause")

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -120.0
offset_right = 160.0
offset_bottom = 120.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
custom_minimum_size = Vector2(300, 200)

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBox"]
text = "Paused"

[node name="ResumeButton" type="Button" parent="Panel/MarginContainer/VBox"]
text = "Resume"

[node name="QuitButton" type="Button" parent="Panel/MarginContainer/VBox"]
text = "Quit to Menu"

[node name="CameraSettingsButton" type="Button" parent="Panel/MarginContainer/VBox"]
text = "Camera Settings"
